Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -15,14 +15,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...30ec358](https://github.com/cri-o/cri-o/compare/v1.20.0...30ec3581466bb7aa23213cfe2997ac6686451c41) on Mon, 22 Mar 2021 03:44:19 UTC.
+[v1.20.0...cb00edb](https://github.com/cri-o/cri-o/compare/v1.20.0...cb00edb372b9acb9713716590c5f2c459bc8b2c7) on Mon, 22 Mar 2021 16:07:52 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.30ec3581466bb7aa23213cfe2997ac6686451c41.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.30ec3581466bb7aa23213cfe2997ac6686451c41.tar.gz)
-- [cri-o.arm64.30ec3581466bb7aa23213cfe2997ac6686451c41.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.30ec3581466bb7aa23213cfe2997ac6686451c41.tar.gz)
+- [cri-o.amd64.cb00edb372b9acb9713716590c5f2c459bc8b2c7.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.cb00edb372b9acb9713716590c5f2c459bc8b2c7.tar.gz)
+- [cri-o.arm64.cb00edb372b9acb9713716590c5f2c459bc8b2c7.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.cb00edb372b9acb9713716590c5f2c459bc8b2c7.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -44,6 +44,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Added feature to allow the OCI seccomp BPF hook to trace containers into dedicated files by
   using the annotation key `io.containers.trace-syscall/container-name` ([#4544](https://github.com/cri-o/cri-o/pull/4544), [@saschagrunert](https://github.com/saschagrunert))
  - Bump containers image to v5.10.1 ([#4519](https://github.com/cri-o/cri-o/pull/4519), [@QiWang19](https://github.com/QiWang19))
+ - CRI-O does not return `<none>` placeholders for missing tags and digests any more when doing a `ListImages` RPC ([#4673](https://github.com/cri-o/cri-o/pull/4673), [@saschagrunert](https://github.com/saschagrunert))
  - Changed `VersionResponse.RuntimeApiVersion` to return either the `v1alpha2` or `v1` CRI API version ([#4473](https://github.com/cri-o/cri-o/pull/4473), [@saschagrunert](https://github.com/saschagrunert))
  - Fix a bug where pods with `hostNetwork: true` couldn't have ports forwarded from them when drop_infra_ctr=true ([#4495](https://github.com/cri-o/cri-o/pull/4495), [@haircommander](https://github.com/haircommander))
  - It is possible to override cgroup v2 unified configuration through the io.kubernetes.cri-o.UnifiedCgroup.$CTR_NAME annotation ([#4479](https://github.com/cri-o/cri-o/pull/4479), [@giuseppe](https://github.com/giuseppe))
