Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -15,14 +15,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...cb00edb](https://github.com/cri-o/cri-o/compare/v1.20.0...cb00edb372b9acb9713716590c5f2c459bc8b2c7) on Mon, 22 Mar 2021 16:07:52 UTC.
+[v1.20.0...72ce0e9](https://github.com/cri-o/cri-o/compare/v1.20.0...72ce0e9f0c8891d1747130d348b67b53587190ad) on Tue, 23 Mar 2021 06:42:12 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.cb00edb372b9acb9713716590c5f2c459bc8b2c7.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.cb00edb372b9acb9713716590c5f2c459bc8b2c7.tar.gz)
-- [cri-o.arm64.cb00edb372b9acb9713716590c5f2c459bc8b2c7.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.cb00edb372b9acb9713716590c5f2c459bc8b2c7.tar.gz)
+- [cri-o.amd64.72ce0e9f0c8891d1747130d348b67b53587190ad.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.72ce0e9f0c8891d1747130d348b67b53587190ad.tar.gz)
+- [cri-o.arm64.72ce0e9f0c8891d1747130d348b67b53587190ad.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.72ce0e9f0c8891d1747130d348b67b53587190ad.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -74,6 +74,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - CRI-O now supports short-name aliases which can be configured in the `containers-registries.conf(5)` configuration files.  Please refer to the following article for further details on short-name aliases: www.redhat.com/sysadmin/container-image-short-names
   
   The `registries` option in the crio.conf has been deprecated and takes no effect any more.  CRI-O will warn when loading the config and note that `containers-registries.conf(5)` should be used instead for configuring unqualified-search registries. ([#4455](https://github.com/cri-o/cri-o/pull/4455), [@vrothberg](https://github.com/vrothberg))
+ - Cri-o managed scopes now depend on the shutdown.target and network.target to allow graceful shutdowns. ([#4654](https://github.com/cri-o/cri-o/pull/4654), [@rphillips](https://github.com/rphillips))
  - Crio adds info level log of the physical image source. ([#4438](https://github.com/cri-o/cri-o/pull/4438), [@QiWang19](https://github.com/QiWang19))
  - Fix OOMs when using crun together with CPU Manager ([#4592](https://github.com/cri-o/cri-o/pull/4592), [@odinuge](https://github.com/odinuge))
  - Fixed a bug where image authentication failed from not finding the auth file. ([#4461](https://github.com/cri-o/cri-o/pull/4461), [@QiWang19](https://github.com/QiWang19))
@@ -84,7 +85,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   There are several significant changes in release 1.1.0, this includes:
       - Experimental PKCS11 support enabled via ENV variable
       - Custom keyprovider support enabled via ENV variable ([#4537](https://github.com/cri-o/cri-o/pull/4537), [@pravinrajr9](https://github.com/pravinrajr9))
- - Update nix pin with `make nixpkgs` ([#4521](https://github.com/cri-o/cri-o/pull/4521), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4395](https://github.com/cri-o/cri-o/pull/4395), [@hswong3i](https://github.com/hswong3i))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4441](https://github.com/cri-o/cri-o/pull/4441), [@pperiyasamy](https://github.com/pperiyasamy))
 
 ## Dependencies
