--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -15,14 +15,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...72ce0e9](https://github.com/cri-o/cri-o/compare/v1.20.0...72ce0e9f0c8891d1747130d348b67b53587190ad) on Tue, 23 Mar 2021 06:42:12 UTC.
+[v1.20.0...0646a8b](https://github.com/cri-o/cri-o/compare/v1.20.0...0646a8b3c616ad6805e5dda5056f09b5359c163b) on Tue, 23 Mar 2021 09:51:18 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.72ce0e9f0c8891d1747130d348b67b53587190ad.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.72ce0e9f0c8891d1747130d348b67b53587190ad.tar.gz)
-- [cri-o.arm64.72ce0e9f0c8891d1747130d348b67b53587190ad.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.72ce0e9f0c8891d1747130d348b67b53587190ad.tar.gz)
+- [cri-o.amd64.0646a8b3c616ad6805e5dda5056f09b5359c163b.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.0646a8b3c616ad6805e5dda5056f09b5359c163b.tar.gz)
+- [cri-o.arm64.0646a8b3c616ad6805e5dda5056f09b5359c163b.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.0646a8b3c616ad6805e5dda5056f09b5359c163b.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -62,6 +62,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix running privileged systemd containers with bidirectional mounts ([#4575](https://github.com/cri-o/cri-o/pull/4575), [@giuseppe](https://github.com/giuseppe))
  - Fixed a bug that could cause CRI-O to segfault when a node is under heavy load ([#4530](https://github.com/cri-o/cri-o/pull/4530), [@haircommander](https://github.com/haircommander))
  - Ingress/Egress burst limit is now set slightly below 4GB, which properly sets 4GB as the upper limit of burst ([#4348](https://github.com/cri-o/cri-o/pull/4348), [@zizon](https://github.com/zizon))
+ - Instead of failing to start, CRI-O now only prints a warning and ignores the runtime, in case a **non*- default runtime is misconfigured. ([#4631](https://github.com/cri-o/cri-o/pull/4631), [@fidencio](https://github.com/fidencio))
  - When dropping the infra container, the container inspect endpoint now returns a PID when requesting the infra container. ([#4613](https://github.com/cri-o/cri-o/pull/4613), [@haircommander](https://github.com/haircommander))
 
 #### Other (Cleanup or Flake)
