Update release notes

--- a/v1.20.2.md
+++ b/v1.20.2.md
@@ -11,14 +11,14 @@
 # CRI-O v1.20.2
 
 The release notes have been generated for the commit range
-[v1.20.1...fecc319](https://github.com/cri-o/cri-o/compare/v1.20.1...fecc319d7f31e4e72be1a641af6e9097eee2d7b5) on Thu, 18 Mar 2021 13:55:34 UTC.
+[v1.20.1...d5a999a](https://github.com/cri-o/cri-o/compare/v1.20.1...d5a999ad0a35d895ded554e1e18c142075501a98) on Wed, 24 Mar 2021 02:34:32 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.fecc319d7f31e4e72be1a641af6e9097eee2d7b5.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.fecc319d7f31e4e72be1a641af6e9097eee2d7b5.tar.gz)
-- [cri-o.arm64.fecc319d7f31e4e72be1a641af6e9097eee2d7b5.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.fecc319d7f31e4e72be1a641af6e9097eee2d7b5.tar.gz)
+- [cri-o.amd64.d5a999ad0a35d895ded554e1e18c142075501a98.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.d5a999ad0a35d895ded554e1e18c142075501a98.tar.gz)
+- [cri-o.arm64.d5a999ad0a35d895ded554e1e18c142075501a98.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.d5a999ad0a35d895ded554e1e18c142075501a98.tar.gz)
 
 ## Changelog since v1.20.1
 
@@ -34,7 +34,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
 _Nothing has changed._
 
 ### Changed
+- github.com/containers/storage: [v1.24.5 → e00c943](https://github.com/containers/storage/compare/v1.24.5...e00c943)
 - github.com/syndtr/gocapability: [42c35b4 → d983527](https://github.com/syndtr/gocapability/compare/42c35b4...d983527)
+- github.com/ulikunitz/xz: [v0.5.9 → v0.5.10](https://github.com/ulikunitz/xz/compare/v0.5.9...v0.5.10)
 
 ### Removed
 _Nothing has changed._
