--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -15,14 +15,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...50b6b5c](https://github.com/cri-o/cri-o/compare/v1.20.0...50b6b5c87598f751468c07fd70d3c3b30fbc9701) on Wed, 24 Mar 2021 14:55:22 UTC.
+[v1.20.0...3cf4a99](https://github.com/cri-o/cri-o/compare/v1.20.0...3cf4a99706b13f05e679768cabfbdaf7e84c0dc6) on Fri, 26 Mar 2021 16:57:40 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.50b6b5c87598f751468c07fd70d3c3b30fbc9701.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.50b6b5c87598f751468c07fd70d3c3b30fbc9701.tar.gz)
-- [cri-o.arm64.50b6b5c87598f751468c07fd70d3c3b30fbc9701.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.50b6b5c87598f751468c07fd70d3c3b30fbc9701.tar.gz)
+- [cri-o.amd64.3cf4a99706b13f05e679768cabfbdaf7e84c0dc6.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.3cf4a99706b13f05e679768cabfbdaf7e84c0dc6.tar.gz)
+- [cri-o.arm64.3cf4a99706b13f05e679768cabfbdaf7e84c0dc6.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.3cf4a99706b13f05e679768cabfbdaf7e84c0dc6.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -59,6 +59,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Bug or Regression
  - Fix a bug where CollectMode wouldn't be set if the feature was backported to systemd (in RHEL/CentOS 7, for instance) ([#4563](https://github.com/cri-o/cri-o/pull/4563), [@haircommander](https://github.com/haircommander))
  - Fix a bug where containers didn't have a finished time set when using the "vm" style runtimes. ([#4468](https://github.com/cri-o/cri-o/pull/4468), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where crio wipe incorrectly wiped container storage even though the node wasn't rebooted ([#4691](https://github.com/cri-o/cri-o/pull/4691), [@haircommander](https://github.com/haircommander))
  - Fix running privileged systemd containers with bidirectional mounts ([#4575](https://github.com/cri-o/cri-o/pull/4575), [@giuseppe](https://github.com/giuseppe))
  - Fixed a bug that could cause CRI-O to segfault when a node is under heavy load ([#4530](https://github.com/cri-o/cri-o/pull/4530), [@haircommander](https://github.com/haircommander))
  - Ingress/Egress burst limit is now set slightly below 4GB, which properly sets 4GB as the upper limit of burst ([#4348](https://github.com/cri-o/cri-o/pull/4348), [@zizon](https://github.com/zizon))
