Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -15,14 +15,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...cfb670f](https://github.com/cri-o/cri-o/compare/v1.20.0...cfb670fbd1326ec52344f3a36cc8cd0433d7b872) on Mon, 29 Mar 2021 21:22:54 UTC.
+[v1.20.0...373a0db](https://github.com/cri-o/cri-o/compare/v1.20.0...373a0db60972fb99cc90281ce40c2b85c5f378ba) on Tue, 30 Mar 2021 00:07:31 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.cfb670fbd1326ec52344f3a36cc8cd0433d7b872.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.cfb670fbd1326ec52344f3a36cc8cd0433d7b872.tar.gz)
-- [cri-o.arm64.cfb670fbd1326ec52344f3a36cc8cd0433d7b872.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.cfb670fbd1326ec52344f3a36cc8cd0433d7b872.tar.gz)
+- [cri-o.amd64.373a0db60972fb99cc90281ce40c2b85c5f378ba.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.373a0db60972fb99cc90281ce40c2b85c5f378ba.tar.gz)
+- [cri-o.arm64.373a0db60972fb99cc90281ce40c2b85c5f378ba.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.373a0db60972fb99cc90281ce40c2b85c5f378ba.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -62,6 +62,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where crio wipe incorrectly wiped container storage even though the node wasn't rebooted ([#4691](https://github.com/cri-o/cri-o/pull/4691), [@haircommander](https://github.com/haircommander))
  - Fix running privileged systemd containers with bidirectional mounts ([#4575](https://github.com/cri-o/cri-o/pull/4575), [@giuseppe](https://github.com/giuseppe))
  - Fixed a bug that could cause CRI-O to segfault when a node is under heavy load ([#4530](https://github.com/cri-o/cri-o/pull/4530), [@haircommander](https://github.com/haircommander))
+ - Fixed a bug which would cause configuration files to not be reloaded properly on SIGHUP when one or more "drop-in" configuration files were being used. ([#4694](https://github.com/cri-o/cri-o/pull/4694), [@nalind](https://github.com/nalind))
  - Ingress/Egress burst limit is now set slightly below 4GB, which properly sets 4GB as the upper limit of burst ([#4348](https://github.com/cri-o/cri-o/pull/4348), [@zizon](https://github.com/zizon))
  - Instead of failing to start, CRI-O now only prints a warning and ignores the runtime, in case a **non*- default runtime is misconfigured. ([#4631](https://github.com/cri-o/cri-o/pull/4631), [@fidencio](https://github.com/fidencio))
  - When dropping the infra container, the container inspect endpoint now returns a PID when requesting the infra container. ([#4613](https://github.com/cri-o/cri-o/pull/4613), [@haircommander](https://github.com/haircommander))
