Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -15,14 +15,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...5fcd229](https://github.com/cri-o/cri-o/compare/v1.20.0...5fcd229bc832ac884c0966b65d4936a93dc76847) on Tue, 30 Mar 2021 10:43:52 UTC.
+[v1.20.0...c00c71e](https://github.com/cri-o/cri-o/compare/v1.20.0...c00c71ec0787648e9caeb2b3f35b0ab949107701) on Tue, 30 Mar 2021 12:14:50 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.5fcd229bc832ac884c0966b65d4936a93dc76847.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.5fcd229bc832ac884c0966b65d4936a93dc76847.tar.gz)
-- [cri-o.arm64.5fcd229bc832ac884c0966b65d4936a93dc76847.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.5fcd229bc832ac884c0966b65d4936a93dc76847.tar.gz)
+- [cri-o.amd64.c00c71ec0787648e9caeb2b3f35b0ab949107701.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.c00c71ec0787648e9caeb2b3f35b0ab949107701.tar.gz)
+- [cri-o.arm64.c00c71ec0787648e9caeb2b3f35b0ab949107701.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.c00c71ec0787648e9caeb2b3f35b0ab949107701.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -122,7 +122,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containerd/nri: [dbaa18c](https://github.com/containerd/nri/tree/dbaa18c)
 - github.com/containerd/stargz-snapshotter/estargz: [2b97b58](https://github.com/containerd/stargz-snapshotter/estargz/tree/2b97b58)
 - github.com/containerd/zfs: [dde8f0f](https://github.com/containerd/zfs/tree/dde8f0f)
-- github.com/containers/podman/v3: [v3.1.0-rc1](https://github.com/containers/podman/v3/tree/v3.1.0-rc1)
+- github.com/containers/podman/v3: [v3.1.0-rc2](https://github.com/containers/podman/v3/tree/v3.1.0-rc2)
 - github.com/denverdino/aliyungo: [a747050](https://github.com/denverdino/aliyungo/tree/a747050)
 - github.com/docker/go-events: [e31b211](https://github.com/docker/go-events/tree/e31b211)
 - github.com/docker/go-plugins-helpers: [c9a8a2d](https://github.com/docker/go-plugins-helpers/tree/c9a8a2d)
@@ -182,6 +182,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/pierrec/lz4: [v2.0.5+incompatible](https://github.com/pierrec/lz4/tree/v2.0.5)
 - github.com/pkg/profile: [v1.2.1](https://github.com/pkg/profile/tree/v1.2.1)
 - github.com/rcrowley/go-metrics: [3113b84](https://github.com/rcrowley/go-metrics/tree/3113b84)
+- github.com/rivo/uniseg: [v0.2.0](https://github.com/rivo/uniseg/tree/v0.2.0)
 - github.com/samuel/go-zookeeper: [2cc03de](https://github.com/samuel/go-zookeeper/tree/2cc03de)
 - github.com/shirou/gopsutil/v3: [v3.20.12](https://github.com/shirou/gopsutil/v3/tree/v3.20.12)
 - github.com/sony/gobreaker: [v0.4.1](https://github.com/sony/gobreaker/tree/v0.4.1)
@@ -224,14 +225,14 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containernetworking/cni: [v0.8.0 → v0.8.1](https://github.com/containernetworking/cni/compare/v0.8.0...v0.8.1)
 - github.com/containernetworking/plugins: [v0.8.7 → v0.9.1](https://github.com/containernetworking/plugins/compare/v0.8.7...v0.9.1)
 - github.com/containers/buildah: [v1.15.2 → v1.19.8](https://github.com/containers/buildah/compare/v1.15.2...v1.19.8)
-- github.com/containers/common: [v0.21.0 → v0.35.2](https://github.com/containers/common/compare/v0.21.0...v0.35.2)
+- github.com/containers/common: [v0.21.0 → v0.35.3](https://github.com/containers/common/compare/v0.21.0...v0.35.3)
 - github.com/containers/image/v5: [v5.7.0 → v5.10.5](https://github.com/containers/image/v5/compare/v5.7.0...v5.10.5)
 - github.com/containers/ocicrypt: [v1.0.3 → v1.1.0](https://github.com/containers/ocicrypt/compare/v1.0.3...v1.1.0)
 - github.com/containers/psgo: [v1.5.1 → v1.5.2](https://github.com/containers/psgo/compare/v1.5.1...v1.5.2)
 - github.com/containers/storage: [v1.24.0 → v1.28.0](https://github.com/containers/storage/compare/v1.24.0...v1.28.0)
 - github.com/coredns/corefile-migration: [v1.0.10 → v1.0.11](https://github.com/coredns/corefile-migration/compare/v1.0.10...v1.0.11)
 - github.com/coreos/go-iptables: [v0.4.5 → v0.5.0](https://github.com/coreos/go-iptables/compare/v0.4.5...v0.5.0)
-- github.com/coreos/go-systemd/v22: [v22.1.0 → v22.2.0](https://github.com/coreos/go-systemd/v22/compare/v22.1.0...v22.2.0)
+- github.com/coreos/go-systemd/v22: [v22.1.0 → v22.3.0](https://github.com/coreos/go-systemd/v22/compare/v22.1.0...v22.3.0)
 - github.com/cri-o/ocicni: [513ef78 → 541cf7c](https://github.com/cri-o/ocicni/compare/513ef78...541cf7c)
 - github.com/docker/docker: [bd33bbf → b6bfff2](https://github.com/docker/docker/compare/bd33bbf...b6bfff2)
 - github.com/emicklei/go-restful: [v2.9.5+incompatible → v2.15.0+incompatible](https://github.com/emicklei/go-restful/compare/v2.9.5...v2.15.0)
@@ -263,7 +264,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/julienschmidt/httprouter: [v1.2.0 → v1.3.0](https://github.com/julienschmidt/httprouter/compare/v1.2.0...v1.3.0)
 - github.com/kisielk/errcheck: [v1.2.0 → v1.5.0](https://github.com/kisielk/errcheck/compare/v1.2.0...v1.5.0)
 - github.com/klauspost/compress: [v1.11.2 → v1.11.12](https://github.com/klauspost/compress/compare/v1.11.2...v1.11.12)
-- github.com/mattn/go-isatty: [v0.0.12 → v0.0.11](https://github.com/mattn/go-isatty/compare/v0.0.12...v0.0.11)
+- github.com/mattn/go-colorable: [v0.1.4 → v0.1.8](https://github.com/mattn/go-colorable/compare/v0.1.4...v0.1.8)
+- github.com/mattn/go-runewidth: [v0.0.9 → v0.0.10](https://github.com/mattn/go-runewidth/compare/v0.0.9...v0.0.10)
 - github.com/mattn/go-shellwords: [v1.0.10 → v1.0.11](https://github.com/mattn/go-shellwords/compare/v1.0.10...v1.0.11)
 - github.com/miekg/dns: [v1.1.4 → v1.1.35](https://github.com/miekg/dns/compare/v1.1.4...v1.1.35)
 - github.com/mitchellh/mapstructure: [v1.1.2 → v1.4.1](https://github.com/mitchellh/mapstructure/compare/v1.1.2...v1.4.1)
