Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -15,14 +15,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...c00c71e](https://github.com/cri-o/cri-o/compare/v1.20.0...c00c71ec0787648e9caeb2b3f35b0ab949107701) on Tue, 30 Mar 2021 12:16:31 UTC.
+[v1.20.0...d257197](https://github.com/cri-o/cri-o/compare/v1.20.0...d257197c0108a740b619b3d0cae7cbf84f24bed7) on Tue, 30 Mar 2021 14:16:31 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.c00c71ec0787648e9caeb2b3f35b0ab949107701.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.c00c71ec0787648e9caeb2b3f35b0ab949107701.tar.gz)
-- [cri-o.arm64.c00c71ec0787648e9caeb2b3f35b0ab949107701.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.c00c71ec0787648e9caeb2b3f35b0ab949107701.tar.gz)
+- [cri-o.amd64.d257197c0108a740b619b3d0cae7cbf84f24bed7.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.d257197c0108a740b619b3d0cae7cbf84f24bed7.tar.gz)
+- [cri-o.arm64.d257197c0108a740b619b3d0cae7cbf84f24bed7.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.d257197c0108a740b619b3d0cae7cbf84f24bed7.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -244,6 +244,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/go-openapi/spec: [v0.19.3 → v0.19.5](https://github.com/go-openapi/spec/compare/v0.19.3...v0.19.5)
 - github.com/go-openapi/strfmt: [v0.19.3 → v0.19.5](https://github.com/go-openapi/strfmt/compare/v0.19.3...v0.19.5)
 - github.com/go-openapi/validate: [v0.19.5 → v0.19.8](https://github.com/go-openapi/validate/compare/v0.19.5...v0.19.8)
+- github.com/godbus/dbus/v5: [v5.0.3 → v5.0.4](https://github.com/godbus/dbus/v5/compare/v5.0.3...v5.0.4)
 - github.com/gofrs/flock: [v0.7.1 → v0.8.0](https://github.com/gofrs/flock/compare/v0.7.1...v0.8.0)
 - github.com/gogo/protobuf: [v1.3.1 → v1.3.2](https://github.com/gogo/protobuf/compare/v1.3.1...v1.3.2)
 - github.com/golang/mock: [v1.4.4 → v1.5.0](https://github.com/golang/mock/compare/v1.4.4...v1.5.0)
