--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -2,6 +2,7 @@
   - [Downloads](#downloads)
   - [Changelog since v1.20.0](#changelog-since-v1200)
     - [Changes by Kind](#changes-by-kind)
+      - [Dependency-Change](#dependency-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
       - [Bug or Regression](#bug-or-regression)
@@ -15,18 +16,21 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...6c3af57](https://github.com/cri-o/cri-o/compare/v1.20.0...6c3af578afb00380eedb0da1785b2db41c98a9bd) on Wed, 31 Mar 2021 02:14:31 UTC.
+[v1.20.0...a2fec8a](https://github.com/cri-o/cri-o/compare/v1.20.0...a2fec8a9147baba3cb20f1b98df719a33a8a6bd8) on Wed, 31 Mar 2021 10:04:30 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.6c3af578afb00380eedb0da1785b2db41c98a9bd.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.6c3af578afb00380eedb0da1785b2db41c98a9bd.tar.gz)
-- [cri-o.arm64.6c3af578afb00380eedb0da1785b2db41c98a9bd.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.6c3af578afb00380eedb0da1785b2db41c98a9bd.tar.gz)
+- [cri-o.amd64.a2fec8a9147baba3cb20f1b98df719a33a8a6bd8.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.a2fec8a9147baba3cb20f1b98df719a33a8a6bd8.tar.gz)
+- [cri-o.arm64.a2fec8a9147baba3cb20f1b98df719a33a8a6bd8.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.a2fec8a9147baba3cb20f1b98df719a33a8a6bd8.tar.gz)
 
 ## Changelog since v1.20.0
 
 ### Changes by Kind
+
+#### Dependency-Change
+ - Default pause image is `k8s.gcr.io/pause:3.5` ([#4550](https://github.com/cri-o/cri-o/pull/4550), [@pacoxu](https://github.com/pacoxu))
 
 #### Feature
  - A new CLI option `--registries-conf-dir` is added which allows users to select
@@ -88,7 +92,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   There are several significant changes in release 1.1.0, this includes:
       - Experimental PKCS11 support enabled via ENV variable
       - Custom keyprovider support enabled via ENV variable ([#4537](https://github.com/cri-o/cri-o/pull/4537), [@pravinrajr9](https://github.com/pravinrajr9))
- - Update nix pin with `make nixpkgs` ([#4521](https://github.com/cri-o/cri-o/pull/4521), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4395](https://github.com/cri-o/cri-o/pull/4395), [@hswong3i](https://github.com/hswong3i))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4441](https://github.com/cri-o/cri-o/pull/4441), [@pperiyasamy](https://github.com/pperiyasamy))
 
 ## Dependencies
