Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -16,14 +16,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...43c49b2](https://github.com/cri-o/cri-o/compare/v1.20.0...43c49b2049fec7501b7e410e0e231d870eb81be5) on Thu, 01 Apr 2021 00:18:55 UTC.
+[v1.20.0...e6c19d7](https://github.com/cri-o/cri-o/compare/v1.20.0...e6c19d73d94b5751dd705db531a32d219b73e5cf) on Thu, 01 Apr 2021 11:52:34 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.43c49b2049fec7501b7e410e0e231d870eb81be5.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.43c49b2049fec7501b7e410e0e231d870eb81be5.tar.gz)
-- [cri-o.arm64.43c49b2049fec7501b7e410e0e231d870eb81be5.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.43c49b2049fec7501b7e410e0e231d870eb81be5.tar.gz)
+- [cri-o.amd64.e6c19d73d94b5751dd705db531a32d219b73e5cf.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.e6c19d73d94b5751dd705db531a32d219b73e5cf.tar.gz)
+- [cri-o.arm64.e6c19d73d94b5751dd705db531a32d219b73e5cf.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.e6c19d73d94b5751dd705db531a32d219b73e5cf.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -126,7 +126,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containerd/nri: [dbaa18c](https://github.com/containerd/nri/tree/dbaa18c)
 - github.com/containerd/stargz-snapshotter/estargz: [2b97b58](https://github.com/containerd/stargz-snapshotter/estargz/tree/2b97b58)
 - github.com/containerd/zfs: [dde8f0f](https://github.com/containerd/zfs/tree/dde8f0f)
-- github.com/containers/podman/v3: [v3.1.0-rc2](https://github.com/containers/podman/v3/tree/v3.1.0-rc2)
+- github.com/containers/podman/v3: [v3.1.0](https://github.com/containers/podman/v3/tree/v3.1.0)
 - github.com/denverdino/aliyungo: [a747050](https://github.com/denverdino/aliyungo/tree/a747050)
 - github.com/docker/go-events: [e31b211](https://github.com/docker/go-events/tree/e31b211)
 - github.com/docker/go-plugins-helpers: [c9a8a2d](https://github.com/docker/go-plugins-helpers/tree/c9a8a2d)
@@ -229,7 +229,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containernetworking/cni: [v0.8.0 → v0.8.1](https://github.com/containernetworking/cni/compare/v0.8.0...v0.8.1)
 - github.com/containernetworking/plugins: [v0.8.7 → v0.9.1](https://github.com/containernetworking/plugins/compare/v0.8.7...v0.9.1)
 - github.com/containers/buildah: [v1.15.2 → v1.20.0](https://github.com/containers/buildah/compare/v1.15.2...v1.20.0)
-- github.com/containers/common: [v0.21.0 → v0.35.3](https://github.com/containers/common/compare/v0.21.0...v0.35.3)
+- github.com/containers/common: [v0.21.0 → v0.35.4](https://github.com/containers/common/compare/v0.21.0...v0.35.4)
 - github.com/containers/image/v5: [v5.7.0 → v5.10.5](https://github.com/containers/image/v5/compare/v5.7.0...v5.10.5)
 - github.com/containers/ocicrypt: [v1.0.3 → v1.1.0](https://github.com/containers/ocicrypt/compare/v1.0.3...v1.1.0)
 - github.com/containers/psgo: [v1.5.1 → v1.5.2](https://github.com/containers/psgo/compare/v1.5.1...v1.5.2)
@@ -318,7 +318,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - golang.org/x/net: 69a7880 → d523dce
 - golang.org/x/oauth2: 9fd6049 → 01de73c
 - golang.org/x/sync: 67f06af → 036812b
-- golang.org/x/sys: 5cba982 → 3901687
+- golang.org/x/sys: 5cba982 → 47abb65
 - golang.org/x/term: ad39bd3 → 6a3ed07
 - golang.org/x/time: 3af7569 → f8bda1e
 - golang.org/x/tools: 079ba7b → v0.1.0
