Update release notes

--- a/v1.20.2.md
+++ b/v1.20.2.md
@@ -3,6 +3,7 @@
   - [Changelog since v1.20.1](#changelog-since-v1201)
     - [Changes by Kind](#changes-by-kind)
       - [Bug or Regression](#bug-or-regression)
+      - [Uncategorized](#uncategorized)
   - [Dependencies](#dependencies)
     - [Added](#added)
     - [Changed](#changed)
@@ -11,14 +12,14 @@
 # CRI-O v1.20.2
 
 The release notes have been generated for the commit range
-[v1.20.1...d5a999a](https://github.com/cri-o/cri-o/compare/v1.20.1...d5a999ad0a35d895ded554e1e18c142075501a98) on Wed, 24 Mar 2021 13:27:54 UTC.
+[v1.20.1...52f1a6e](https://github.com/cri-o/cri-o/compare/v1.20.1...52f1a6e4ae3f8a051420baa35a8502b143d70216) on Tue, 06 Apr 2021 13:27:37 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.d5a999ad0a35d895ded554e1e18c142075501a98.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.d5a999ad0a35d895ded554e1e18c142075501a98.tar.gz)
-- [cri-o.arm64.d5a999ad0a35d895ded554e1e18c142075501a98.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.d5a999ad0a35d895ded554e1e18c142075501a98.tar.gz)
+- [cri-o.amd64.52f1a6e4ae3f8a051420baa35a8502b143d70216.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.52f1a6e4ae3f8a051420baa35a8502b143d70216.tar.gz)
+- [cri-o.arm64.52f1a6e4ae3f8a051420baa35a8502b143d70216.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.52f1a6e4ae3f8a051420baa35a8502b143d70216.tar.gz)
 
 ## Changelog since v1.20.1
 
@@ -28,13 +29,18 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix running privileged containers causing the `unknown capability "CAP_PERFMON"` error ([#4659](https://github.com/cri-o/cri-o/pull/4659), [@saschagrunert](https://github.com/saschagrunert))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4656](https://github.com/cri-o/cri-o/pull/4656), [@jianzzha](https://github.com/jianzzha))
 
+#### Uncategorized
+ - Fix bug where cri-o would fail if tzdata package wasn't installed ([#4716](https://github.com/cri-o/cri-o/pull/4716), [@haircommander](https://github.com/haircommander))
+
 ## Dependencies
 
 ### Added
 _Nothing has changed._
 
 ### Changed
+- github.com/containers/common: [v0.21.0 → v0.26.3](https://github.com/containers/common/compare/v0.21.0...v0.26.3)
 - github.com/containers/storage: [v1.24.5 → e00c943](https://github.com/containers/storage/compare/v1.24.5...e00c943)
+- github.com/onsi/ginkgo: [v1.14.1 → v1.14.2](https://github.com/onsi/ginkgo/compare/v1.14.1...v1.14.2)
 - github.com/syndtr/gocapability: [42c35b4 → d983527](https://github.com/syndtr/gocapability/compare/42c35b4...d983527)
 - github.com/ulikunitz/xz: [v0.5.9 → v0.5.10](https://github.com/ulikunitz/xz/compare/v0.5.9...v0.5.10)
 
