--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -16,14 +16,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...ec8716f](https://github.com/cri-o/cri-o/compare/v1.20.0...ec8716f8a641dc287616272e3aa872806fc36bc9) on Fri, 02 Apr 2021 02:12:24 UTC.
+[v1.20.0...05d2d50](https://github.com/cri-o/cri-o/compare/v1.20.0...05d2d503c6205964047c11623330ea474c3a7ad0) on Wed, 07 Apr 2021 08:50:21 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.ec8716f8a641dc287616272e3aa872806fc36bc9.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.ec8716f8a641dc287616272e3aa872806fc36bc9.tar.gz)
-- [cri-o.arm64.ec8716f8a641dc287616272e3aa872806fc36bc9.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.ec8716f8a641dc287616272e3aa872806fc36bc9.tar.gz)
+- [cri-o.amd64.05d2d503c6205964047c11623330ea474c3a7ad0.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.05d2d503c6205964047c11623330ea474c3a7ad0.tar.gz)
+- [cri-o.arm64.05d2d503c6205964047c11623330ea474c3a7ad0.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.05d2d503c6205964047c11623330ea474c3a7ad0.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -74,6 +74,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Other (Cleanup or Flake)
  - Add clean_shutdown_file option to allow crio/crio wipe to verify crio had time to shutdown cleanly ([#3999](https://github.com/cri-o/cri-o/pull/3999), [@haircommander](https://github.com/haircommander))
  - Add metric to grab latency for individual CRI calls. ([#4598](https://github.com/cri-o/cri-o/pull/4598), [@umohnani8](https://github.com/umohnani8))
+ - Fixed version log timestamp when starting CRI-O ([#4724](https://github.com/cri-o/cri-o/pull/4724), [@saschagrunert](https://github.com/saschagrunert))
  - Log the container stop timeout at default log level ([#4549](https://github.com/cri-o/cri-o/pull/4549), [@mrunalp](https://github.com/mrunalp))
 
 #### Uncategorized
