--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -16,14 +16,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...05d2d50](https://github.com/cri-o/cri-o/compare/v1.20.0...05d2d503c6205964047c11623330ea474c3a7ad0) on Wed, 07 Apr 2021 15:23:55 UTC.
+[v1.20.0...f4d2757](https://github.com/cri-o/cri-o/compare/v1.20.0...f4d2757e130dd778a9b036914d4212461dccea0a) on Wed, 07 Apr 2021 15:43:06 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.05d2d503c6205964047c11623330ea474c3a7ad0.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.05d2d503c6205964047c11623330ea474c3a7ad0.tar.gz)
-- [cri-o.arm64.05d2d503c6205964047c11623330ea474c3a7ad0.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.05d2d503c6205964047c11623330ea474c3a7ad0.tar.gz)
+- [cri-o.amd64.f4d2757e130dd778a9b036914d4212461dccea0a.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.f4d2757e130dd778a9b036914d4212461dccea0a.tar.gz)
+- [cri-o.arm64.f4d2757e130dd778a9b036914d4212461dccea0a.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.f4d2757e130dd778a9b036914d4212461dccea0a.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -64,6 +64,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where CollectMode wouldn't be set if the feature was backported to systemd (in RHEL/CentOS 7, for instance) ([#4563](https://github.com/cri-o/cri-o/pull/4563), [@haircommander](https://github.com/haircommander))
  - Fix a bug where containers didn't have a finished time set when using the "vm" style runtimes. ([#4468](https://github.com/cri-o/cri-o/pull/4468), [@haircommander](https://github.com/haircommander))
  - Fix a bug where crio wipe incorrectly wiped container storage even though the node wasn't rebooted ([#4691](https://github.com/cri-o/cri-o/pull/4691), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where pods or containers could be cleaned up out of order if the request timed out ([#4722](https://github.com/cri-o/cri-o/pull/4722), [@haircommander](https://github.com/haircommander))
  - Fix running privileged systemd containers with bidirectional mounts ([#4575](https://github.com/cri-o/cri-o/pull/4575), [@giuseppe](https://github.com/giuseppe))
  - Fixed a bug that could cause CRI-O to segfault when a node is under heavy load ([#4530](https://github.com/cri-o/cri-o/pull/4530), [@haircommander](https://github.com/haircommander))
  - Fixed a bug which would cause configuration files to not be reloaded properly on SIGHUP when one or more "drop-in" configuration files were being used. ([#4694](https://github.com/cri-o/cri-o/pull/4694), [@nalind](https://github.com/nalind))
@@ -93,7 +94,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   There are several significant changes in release 1.1.0, this includes:
       - Experimental PKCS11 support enabled via ENV variable
       - Custom keyprovider support enabled via ENV variable ([#4537](https://github.com/cri-o/cri-o/pull/4537), [@pravinrajr9](https://github.com/pravinrajr9))
- - Update nix pin with `make nixpkgs` ([#4521](https://github.com/cri-o/cri-o/pull/4521), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4395](https://github.com/cri-o/cri-o/pull/4395), [@hswong3i](https://github.com/hswong3i))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4441](https://github.com/cri-o/cri-o/pull/4441), [@pperiyasamy](https://github.com/pperiyasamy))
 
 ## Dependencies
