Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -16,14 +16,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...b77a78e](https://github.com/cri-o/cri-o/compare/v1.20.0...b77a78ef5283efb97078d271296c1c57abed1f23) on Wed, 07 Apr 2021 19:54:21 UTC.
+[v1.20.0...b012b01](https://github.com/cri-o/cri-o/compare/v1.20.0...b012b0162a5f0a416d78f650428599c62c0817ca) on Wed, 07 Apr 2021 21:58:12 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.b77a78ef5283efb97078d271296c1c57abed1f23.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.b77a78ef5283efb97078d271296c1c57abed1f23.tar.gz)
-- [cri-o.arm64.b77a78ef5283efb97078d271296c1c57abed1f23.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.b77a78ef5283efb97078d271296c1c57abed1f23.tar.gz)
+- [cri-o.amd64.b012b0162a5f0a416d78f650428599c62c0817ca.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.b012b0162a5f0a416d78f650428599c62c0817ca.tar.gz)
+- [cri-o.arm64.b012b0162a5f0a416d78f650428599c62c0817ca.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.b012b0162a5f0a416d78f650428599c62c0817ca.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -297,6 +297,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/sendgrid/sendgrid-go: [v3.7.1+incompatible → v3.7.2+incompatible](https://github.com/sendgrid/sendgrid-go/compare/v3.7.1...v3.7.2)
 - github.com/shirou/gopsutil: [v3.20.10+incompatible → e4ec7b2](https://github.com/shirou/gopsutil/compare/v3.20.10...e4ec7b2)
 - github.com/sirupsen/logrus: [v1.7.0 → v1.8.1](https://github.com/sirupsen/logrus/compare/v1.7.0...v1.8.1)
+- github.com/soheilhy/cmux: [v0.1.4 → v0.1.5](https://github.com/soheilhy/cmux/compare/v0.1.4...v0.1.5)
 - github.com/spf13/cobra: [v1.1.1 → v1.1.3](https://github.com/spf13/cobra/compare/v1.1.1...v1.1.3)
 - github.com/stretchr/testify: [v1.6.1 → v1.7.0](https://github.com/stretchr/testify/compare/v1.6.1...v1.7.0)
 - github.com/syndtr/gocapability: [d983527 → 42c35b4](https://github.com/syndtr/gocapability/compare/d983527...42c35b4)
