Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -4,6 +4,7 @@
     - [Changes by Kind](#changes-by-kind)
       - [Dependency-Change](#dependency-change)
       - [Feature](#feature)
+      - [Design](#design)
       - [Documentation](#documentation)
       - [Bug or Regression](#bug-or-regression)
       - [Other (Cleanup or Flake)](#other-cleanup-or-flake)
@@ -16,14 +17,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...ebfea30](https://github.com/cri-o/cri-o/compare/v1.20.0...ebfea30e1d292d32c4af1b9be975f5700605bd56) on Thu, 08 Apr 2021 11:05:21 UTC.
+[v1.20.0...aab1c9a](https://github.com/cri-o/cri-o/compare/v1.20.0...aab1c9ad4d14dd4f4edc7155f7db496367b700df) on Thu, 08 Apr 2021 16:17:07 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.ebfea30e1d292d32c4af1b9be975f5700605bd56.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.ebfea30e1d292d32c4af1b9be975f5700605bd56.tar.gz)
-- [cri-o.arm64.ebfea30e1d292d32c4af1b9be975f5700605bd56.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.ebfea30e1d292d32c4af1b9be975f5700605bd56.tar.gz)
+- [cri-o.amd64.aab1c9ad4d14dd4f4edc7155f7db496367b700df.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.aab1c9ad4d14dd4f4edc7155f7db496367b700df.tar.gz)
+- [cri-o.arm64.aab1c9ad4d14dd4f4edc7155f7db496367b700df.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.aab1c9ad4d14dd4f4edc7155f7db496367b700df.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -56,6 +57,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Provide a new configuration flag to specify CPUs that will be used to run infra containers ([#4459](https://github.com/cri-o/cri-o/pull/4459), [@cynepco3hahue](https://github.com/cynepco3hahue))
  - Support Container Runtime Interface (CRI) security profiles for seccomp, which has been introduced with Kubernetes v1.20.0 and the graduation of the CRI. ([#4358](https://github.com/cri-o/cri-o/pull/4358), [@saschagrunert](https://github.com/saschagrunert))
  - Support enabling pprof profile over CRI-O's unix socket ([#4514](https://github.com/cri-o/cri-o/pull/4514), [@mrunalp](https://github.com/mrunalp))
+
+#### Design
+ - Add support for customizing container specs based on workloads. Each workload has an activation_annotation that, when present, activates the specific workload. Then, each workload has the option to configure different resources. Resources can have default values, or require that they're specified for each individual container. This is done by annotation, which is of the form `$annotation_prefix.$resource_name/$container_name`, where annotation_prefix is configured for the particular workload, resource_name corresponds to the resource being configured, and container name is the container in a pod that should have its resource configured. ([#4725](https://github.com/cri-o/cri-o/pull/4725), [@haircommander](https://github.com/haircommander))
 
 #### Documentation
  - The installed cri-o.service file now attempts to be run before kubelet.service ([#4443](https://github.com/cri-o/cri-o/pull/4443), [@haircommander](https://github.com/haircommander))
@@ -94,7 +98,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   There are several significant changes in release 1.1.0, this includes:
       - Experimental PKCS11 support enabled via ENV variable
       - Custom keyprovider support enabled via ENV variable ([#4537](https://github.com/cri-o/cri-o/pull/4537), [@pravinrajr9](https://github.com/pravinrajr9))
- - Update nix pin with `make nixpkgs` ([#4521](https://github.com/cri-o/cri-o/pull/4521), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4395](https://github.com/cri-o/cri-o/pull/4395), [@hswong3i](https://github.com/hswong3i))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4441](https://github.com/cri-o/cri-o/pull/4441), [@pperiyasamy](https://github.com/pperiyasamy))
 
 ## Dependencies
