Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -17,14 +17,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...8118d4a](https://github.com/cri-o/cri-o/compare/v1.20.0...8118d4a58693d1c7211b5fa73df1be2db1f9404f) on Fri, 09 Apr 2021 01:45:07 UTC.
+[v1.20.0...da81fd7](https://github.com/cri-o/cri-o/compare/v1.20.0...da81fd7d70110be3636a6913fce5de0c9a9731e6) on Fri, 09 Apr 2021 13:14:54 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.8118d4a58693d1c7211b5fa73df1be2db1f9404f.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.8118d4a58693d1c7211b5fa73df1be2db1f9404f.tar.gz)
-- [cri-o.arm64.8118d4a58693d1c7211b5fa73df1be2db1f9404f.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.8118d4a58693d1c7211b5fa73df1be2db1f9404f.tar.gz)
+- [cri-o.amd64.da81fd7d70110be3636a6913fce5de0c9a9731e6.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.da81fd7d70110be3636a6913fce5de0c9a9731e6.tar.gz)
+- [cri-o.arm64.da81fd7d70110be3636a6913fce5de0c9a9731e6.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.da81fd7d70110be3636a6913fce5de0c9a9731e6.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -37,6 +37,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - A new CLI option `--registries-conf-dir` is added which allows users to select
   a specific `registries.conf.d(5)` path which will be used instead of the user or
   system default paths. ([#4595](https://github.com/cri-o/cri-o/pull/4595), [@maybe-sybr](https://github.com/maybe-sybr))
+ - Added `container_runtime_crio_containers_oom_total` and  `container_runtime_crio_containers_oom` metrics,
+  which collects out of memory (oom) containers. ([#4690](https://github.com/cri-o/cri-o/pull/4690), [@saschagrunert](https://github.com/saschagrunert))
  - Added `crio-status.8` man page to static release bundle ([#4510](https://github.com/cri-o/cri-o/pull/4510), [@saschagrunert](https://github.com/saschagrunert))
  - Added arm64 variant to static binary bundle. The bundle is now available via the URL
   `https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.$ARCH.$VERSION.tar.gz`,
